recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:6: error: not found: value squareSide
    squareSide(levels-1,length*0.4)
    ^PentaKoch:9: error: not found: value squareSide
      squareSide(levels-1,length*0.4)
      ^PentaKoch:12: error: not found: value squareSide
    squareSide(levels-1,length*0.4)
    ^