recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
  if (levels==0){
    avance(length)
  }
  else{
    squareSide(levels-1,length*0.4)
    gauche(108)
    for (i<-0 to 2) {
      squareSide(levels-1,length*0.4)
    	droite(72)
    }
    squareSide(levels-1,length*0.4)
    gauche(108)
    
  }
}